# cpp-sdk

./: .gitignore  CMakeLists.txt
cmake/: FindDPP.cmake
include/topgg/: client.h  export.h  models.h  result.h  topgg.h  webhook.h
src/: models.cpp  result.cpp  webhook.cpp
tests/: client_test.cpp  models_test.cpp  webhook_test.cpp
